# CS-Senior-Design

./: README.md  gimbal_control.py  terminal commands
Drone_ROS_ws/install/: local_setup.sh  setup.sh
Drone_ROS_ws/src/MavCommunicator_David/: CMakeLists.txt  package.xml
gimbal_driver/: setup.cfg  setup.py
gimbal_driver/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/Aruco_Detect/lib/Aruco_Detect/: ArucoNode
install/Aruco_Detect/share/Aruco_Detect/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  (+2 more)
log/: latest_build
openCV/install/: setup.sh
openCV/log/: latest_build
openCV/src/my_opencv_demo/: CMakeLists.txt
openCV/src/my_opencv_demo/launch/: opencv_demo.launch.py
openCV/src/my_opencv_demo/src/: minimal_opencv_ros2_node.cpp  minimal_opencv_ros2_subscriber.cpp
receiver/: package.xml  setup.py
receiver/receiver/: receiver.py
sender/: setup.cfg  setup.py
sender/install/: local_setup.sh  setup.sh
src/Aruco_Detect/: CMakeLists.txt  package.xml
src/Aruco_Detect/src/: Aruco_Detection.cpp  minimal_opencv_ros2_subscriber.cpp
src/Custom_Mode/: CMakeLists.txt
src/Gimbal_Driver/: CMakeLists.txt
src/Gimbal_Driver/src/: Gimbal_Control.cpp
src/Launch_Files/: CMakeLists.txt
src/Offboard_Control/: CMakeLists.txt
src/Offboard_Control/src/: Autonomous_Control.cpp
src/Search_Protocol/: CMakeLists.txt
src/Uav_Ugv_Link/: CMakeLists.txt
src/Uav_Ugv_Link/src/: Ugv_Link.cpp
src/openCV/install/: local_setup.sh
(+71 files in other folders)
